c-mall changes